--- a/style.css
+++ b/style.css
@@ -117,7 +117,16 @@ width: 20px;
 height: 20px;
 cursor: pointer;
 }
-
+.barra{
+    background-color: var(--fundo-senha);
+    height: 30px;
+    width: 100%;
+}
+.forca{
+    height: 30px;
+    position: relative;
+    bottom: 30px;
+}
 @media screen and (min-width: 768px) {
 .parametro-coluna__senha {
 flex-direction: row;
